# nicholas-bruce-phd

./: .gitignore  README.md  pyproject.toml
compute-canada-scripts/: buildAEdatasets.sh  extractBB.sh  extract_LWA_ant.py  make_2GB_TBN.sh  pullLWAantenna.sh  runAE.sh  waterfalls_from_TBN.sh
data-handling/: detect-multiple-files.sh
datautils/: create-stepped-sweep.py  data-correlator.py  rfind-h5-to-csv.py  sensible-rfind-h5.py  sensible-single-rfind-channel-h5.py  sim-correlator.py  sweeps.py  temp-check.py  waterfall.py
plotutils/: pcoords-example.csv  pcoords-example.py  pcoords.py  plot_baseband_RFI.py  plot_relative_phases.py  plot_scatters.py  pngsToGif.py  pngsToMP4.py
simulations/: SK-SNR.py  complex-correlated-noise.py  dva-SK.py  frequency_offset.py  phase-align-using-noise-source.py  real-correlated-noise.py  smallBF.py  socketio-client-pusher.py  two-real-ffts-in-one.py  utils.py  var-from-correlated-noise.py  zmq-spectra-receiver.py  zmq-spectra-server.py
specutils/: ExtractSpectraToH5.py  Extract_C64_to_BB_files.py  USRPExtractSpectra.py  __init__.py  arrUtils.py  decorators.py  generateChirp.py  linearAlgebraTools.py  medianMaker3000.py  multi-thread-ExtractSpectra.py  specUtils.py  utils.py
